Changed not_in_nav chunithm lines to reference the chusan directory instead of the individual files, so people don't have to keep adding new files if/when they're created.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,9 +169,7 @@ nav:
   - Other Resources: resources.md
 
 not_in_nav: |
-  games/chusan/c2c.md
-  games/chusan/controllers.md
-  games/chusan/troubleshooting.md
+  games/chusan
 
 theme:
   name: material
