add ONGEKI bright MEMORY guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,6 +146,11 @@ nav:
           - "Game Setup": "games/maimaidx/buddies/setup.md"
           - "Controllers": "games/maimaidx/buddies/controllers.md"
           - "Troubleshooting": "games/maimaidx/buddies/troubleshooting.md"
+      - "ONGEKI":
+        - "bright MEMORY":
+          - "Game Setup": "games/ongekibrightmemory/setup.md"
+          - "Controllers": "games/ongekibrightmemory/controllers.md"
+          - "Troubleshooting": "games/ongekibrightmemory/troubleshooting.md"
     - NAMCO:
       - "Taiko no Tatsujin: Nijiiro":
         - "Game Setup": "games/taikonijiiro/setup.md"
@@ -170,6 +175,7 @@ nav:
 
 not_in_nav: |
   games/chusan
+  games/mu3
 
 theme:
   name: material
