Add WACCA guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,6 +156,22 @@ nav:
           - "Game Setup": "games/ongekibrightmemory/setup.md"
           - "Controllers": "games/ongekibrightmemory/controllers.md"
           - "Troubleshooting": "games/ongekibrightmemory/troubleshooting.md"
+      - "WACCA":
+        - "WACCA":
+          - "Game Setup": "games/wacca/setup.md"
+          - "Controllers": "games/wacca/controllers.md"
+        - "WACCA S":
+          - "Game Setup": "games/waccas/setup.md"
+          - "Controllers": "games/waccas/controllers.md"
+        - "WACCA Lily":
+          - "Game Setup": "games/waccalily/setup.md"
+          - "Controllers": "games/waccalily/controllers.md"
+        - "WACCA Lily R":
+          - "Game Setup": "games/waccalilyr/setup.md"
+          - "Controllers": "games/waccalilyr/controllers.md"
+        - "WACCA Reverse":
+          - "Game Setup": "games/waccareverse/setup.md"
+          - "Controllers": "games/waccareverse/controllers.md"
     - NAMCO:
       - "Taiko no Tatsujin: Nijiiro":
         - "Game Setup": "games/taikonijiiro/setup.md"
@@ -182,6 +198,7 @@ nav:
 not_in_nav: |
   games/chusan
   games/mu3
+  games/mercury
 
 theme:
   name: material
