maimaidx: prism and prismplus

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,14 @@ nav:
           - "Game Setup": "games/maimaidx/buddies/setup.md"
           - "Controllers": "games/maimaidx/buddies/controllers.md"
           - "Troubleshooting": "games/maimaidx/buddies/troubleshooting.md"
+        - "PRiSM":
+          - "Game Setup": "games/maimaidx/prism/setup.md"
+          - "Controllers": "games/maimaidx/prism/controllers.md"
+          - "Troubleshooting": "games/maimaidx/prism/troubleshooting.md"
+        - "PRiSM PLUS":
+          - "Game Setup": "games/maimaidx/prismplus/setup.md"
+          - "Controllers": "games/maimaidx/prismplus/controllers.md"
+          - "Troubleshooting": "games/maimaidx/prismplus/troubleshooting.md"
       - "O.N.G.E.K.I.":
         - "bright MEMORY":
           - "Game Setup": "games/ongekibrightmemory/setup.md"
