Add DDR guide - A20 to WORLD

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,17 +76,17 @@ nav:
           - "Common Problems/Tips": "games/hellopopn/problems.md"
       - "DDR":
         - "DDR A20":
-          - "Game Setup": "games/ddra20/setup.md"
-          - "Troubleshooting": "games/ddra20/troubleshooting.md"
+          - "Game Setup": "games/ddr/a20/setup.md"
+          - "Troubleshooting": "games/ddr/a20/troubleshooting.md"
         - "DDR A20 PLUS":
-          - "Game Setup": "games/ddra20plus/setup.md"
-          - "Troubleshooting": "games/ddra20plus/troubleshooting.md"
+          - "Game Setup": "games/ddr/a20plus/setup.md"
+          - "Troubleshooting": "games/ddr/a20plus/troubleshooting.md"
         - "DDR A3":
-          - "Game Setup": "games/ddra3/setup.md"
-          - "Troubleshooting": "games/ddra3/troubleshooting.md"
+          - "Game Setup": "games/ddr/a3/setup.md"
+          - "Troubleshooting": "games/ddr/a3/troubleshooting.md"
         - "DDR WORLD":
-          - "Game Setup": "games/ddrworld/setup.md"
-          - "Troubleshooting": "games/ddrworld/troubleshooting.md"
+          - "Game Setup": "games/ddr/world/setup.md"
+          - "Troubleshooting": "games/ddr/world/troubleshooting.md"
       - "Jubeat":
         - "Jubeat Clan":
           - "First Time Setup": "games/jubeatclan/setup.md"
