Move sdvx games to games/bemani/sdvx/

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,15 +55,15 @@ nav:
           - "Troubleshooting": "games/iidx32/troubleshooting.md"
       - "SDVX":
         - "SDVX IV HEAVENLY HAVEN":
-          - "First Time Setup": "games/sdvx4/setup.md"
-          - "Common Problems/Tips": "games/sdvx4/problems.md"
+          - "First Time Setup": "games/bemani/sdvx/4_heavenly-haven/setup.md"
+          - "Common Problems/Tips": "games/bemani/sdvx/4_heavenly-haven/problems.md"
         - "SDVX VIVID WAVE":
-          - "First Time Setup": "games/sdvx5/setup.md"
-          - "Common Problems/Tips": "games/sdvx5/problems.md"
+          - "First Time Setup": "games/bemani/sdvx/5_vivid-wave/setup.md"
+          - "Common Problems/Tips": "games/bemani/sdvx/5_vivid-wave/problems.md"
         - "SDVX EXCEED GEAR":
-          - "Game Setup": "games/sdvx6/setup.md"
-          - "Extra Information": "games/sdvx6/extras.md"
-          - "Troubleshooting": "games/sdvx6/troubleshooting.md"
+          - "Game Setup": "games/bemani/sdvx/6_exceed-gear/setup.md"
+          - "Extra Information": "games/bemani/sdvx/6_exceed-gear/extras.md"
+          - "Troubleshooting": "games/bemani/sdvx/6_exceed-gear/troubleshooting.md"
       - "Pop&apos;n":
         - "Pop&apos;n Usaneko":
           - "First Time Setup": "games/popnusaneko/setup.md"
