--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,17 +76,17 @@ nav:
           - "Common Problems/Tips": "games/hellopopn/problems.md"
       - "Dance Dance Revolution":
         - "A20":
-          - "Game Setup": "games/ddr/a20/setup.md"
-          - "Troubleshooting": "games/ddr/a20/troubleshooting.md"
+          - "Game Setup": "games/bemani/ddr/a20/setup.md"
+          - "Troubleshooting": "games/bemani/ddr/a20/troubleshooting.md"
         - "A20 PLUS":
-          - "Game Setup": "games/ddr/a20plus/setup.md"
-          - "Troubleshooting": "games/ddr/a20plus/troubleshooting.md"
+          - "Game Setup": "games/bemani/ddr/a20plus/setup.md"
+          - "Troubleshooting": "games/bemani/ddr/a20plus/troubleshooting.md"
         - "A3":
-          - "Game Setup": "games/ddr/a3/setup.md"
-          - "Troubleshooting": "games/ddr/a3/troubleshooting.md"
+          - "Game Setup": "games/bemani/ddr/a3/setup.md"
+          - "Troubleshooting": "games/bemani/ddr/a3/troubleshooting.md"
         - "WORLD":
-          - "Game Setup": "games/ddr/world/setup.md"
-          - "Troubleshooting": "games/ddr/world/troubleshooting.md"
+          - "Game Setup": "games/bemani/ddr/world/setup.md"
+          - "Troubleshooting": "games/bemani/ddr/world/troubleshooting.md"
       - "Jubeat":
         - "Clan":
           - "First Time Setup": "games/jubeatclan/setup.md"
